# clion-cmake-test

./: .gitmodules  BoostAndroid.cmake  CMakeLists.txt  README.md  catch2.cmake  json.cmake  main.c  mem.cmake  opencv.cmake  qt.cmake  sqlite.cmake
Boost-for-Android/: build-android.sh  build.sh
Mem/: CMemBlock.h
SDK/: CMakeLists.txt  Introduce.h  Version.c
SDK/Algorithm/: algorithmBase.cpp
SDK/Include/Algorithm/: algorithmBase.h
SDK/Include/OpenCV/: FaceRecognition.h  NumRecognition.cpp  NumRecognition.h  ui_cvui.h
SDK/Include/Qt/: qt.cpp
SDK/Include/ThreadPool/: thpool.h
SDK/Include/protobuf/: protobuffer.h
SDK/OpenCV/: FaceRecognition.cpp  NumRecognition.h  ui_cvui.cpp
SDK/Qt/: qt.h
SDK/ThreadPool/: thpool.cpp
SDK/protobuf/: addressbook.pb.cc  protobuffer.cpp
WebRTC/: CMakeLists.txt
mysql/: CMakeLists.txt
test/: CMakeLists.txt  Reflect.cpp  WebRTCTest.cpp  boostTest.cpp  client_test.cpp  ffmpegTest.cpp  jsonTest.cpp  linux_server_test.cpp  mac_server_test.cpp  mysqlTest.cpp  opencvTest.cpp  protobufTest.cpp  qtTest.cpp  sdkTest.cpp  sqliteTest.cpp  unix_server_test.cpp
