aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} TEST_SOURCE_FILES)

foreach(srcFile ${TEST_SOURCE_FILES})
    string(REGEX REPLACE ".*/\(.*\).cpp$" "\\1" TEST_TARGET_NAME ${srcFile})
    if(NOT "${TEST_TARGET_NAME}" STREQUAL "mac_server_test" AND NOT "${TEST_TARGET_NAME}" STREQUAL "linux_server_test")
        add_executable(${TEST_TARGET_NAME} ${srcFile})
        target_link_libraries(${TEST_TARGET_NAME} ${Boost_LIBRARIES})
    else(NOT "${TEST_TARGET_NAME}" STREQUAL "mac_server_test" AND NOT "${TEST_TARGET_NAME}" STREQUAL "linux_server_test")
        if(UNIX)
            if(APPLE)
                if("${TEST_TARGET_NAME}" STREQUAL "mac_server_test")
                    add_executable(mac_server_test ${srcFile})
                    target_link_libraries(mac_server_test ${Boost_LIBRARIES})
                endif("${TEST_TARGET_NAME}" STREQUAL "mac_server_test")
            elseif(ANDROID)
            else()
                if("${TEST_TARGET_NAME}" STREQUAL "linux_server_test")
                    add_executable(linux_server_test ${srcFile})
                    target_link_libraries(${TEST_TARGET_NAME} ${Boost_LIBRARIES})
                endif("${TEST_TARGET_NAME}" STREQUAL "unix_server_test")
            endif()
        else(UNIX)
            if(WIN32)
            else(WIN32)
            endif(WIN32)
        endif(UNIX)
    endif(NOT "${TEST_TARGET_NAME}" STREQUAL "mac_server_test" AND NOT "${TEST_TARGET_NAME}" STREQUAL "linux_server_test")
endforeach()