aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} TEST_SOURCE_FILES)

foreach(srcFile ${TEST_SOURCE_FILES})
    string(REGEX REPLACE ".*/\(.*\).cpp$" "\\1" TEST_TARGET_NAME ${srcFile})
    if(NOT "${TEST_TARGET_NAME}" STREQUAL "mac_server_test" AND NOT "${TEST_TARGET_NAME}" STREQUAL "linux_server_test")
        if(NOT "${TEST_TARGET_NAME}" STREQUAL "sqliteTest")
            if(NOT "${TEST_TARGET_NAME}" STREQUAL "opencvTest")
                if(NOT "${TEST_TARGET_NAME}" STREQUAL "qtTest")
                    if(NOT "${TEST_TARGET_NAME}" STREQUAL "WebRTCTest")
                        add_executable(${TEST_TARGET_NAME} ${srcFile})
                        target_link_libraries(${TEST_TARGET_NAME} ${Boost_LIBRARIES})
                    else(NOT "${TEST_TARGET_NAME}" STREQUAL "WebRTCTest")
                        if(USE_WEBRTC_COMMON)
                            add_executable(WebRTCTest ${srcFile})
                            target_link_libraries(WebRTCTest ${Boost_LIBRARIES})
                        endif(USE_WEBRTC_COMMON)
                    endif(NOT "${TEST_TARGET_NAME}" STREQUAL "WebRTCTest")
                else(NOT "${TEST_TARGET_NAME}" STREQUAL "qtTest")
                    add_executable(qtTest ${srcFile})
                    target_link_libraries(qtTest ${Boost_LIBRARIES} Qt5::Widgets Qt5::Xml)
                endif(NOT "${TEST_TARGET_NAME}" STREQUAL "qtTest")
            else(NOT "${TEST_TARGET_NAME}" STREQUAL "opencvTest")
                add_executable(opencvTest ${srcFile})
                target_link_libraries(opencvTest ${Boost_LIBRARIES} ${OpenCV_LIBS})
            endif(NOT "${TEST_TARGET_NAME}" STREQUAL "opencvTest")
        else(NOT "${TEST_TARGET_NAME}" STREQUAL "sqliteTest")
            add_executable(sqliteTest ${srcFile})
            target_link_libraries(sqliteTest ${Boost_LIBRARIES} sqlite)
        endif(NOT "${TEST_TARGET_NAME}" STREQUAL "sqliteTest")
    else(NOT "${TEST_TARGET_NAME}" STREQUAL "mac_server_test" AND NOT "${TEST_TARGET_NAME}" STREQUAL "linux_server_test")
        if(UNIX)
            if(APPLE)
                if("${TEST_TARGET_NAME}" STREQUAL "mac_server_test")
                    add_executable(mac_server_test ${srcFile})
                    target_link_libraries(mac_server_test ${Boost_LIBRARIES})
                endif("${TEST_TARGET_NAME}" STREQUAL "mac_server_test")
            elseif(ANDROID)
            else()
                if("${TEST_TARGET_NAME}" STREQUAL "linux_server_test")
                    add_executable(linux_server_test ${srcFile})
                    target_link_libraries(${TEST_TARGET_NAME} ${Boost_LIBRARIES})
                endif("${TEST_TARGET_NAME}" STREQUAL "unix_server_test")
            endif()
        else(UNIX)
            if(WIN32)
            else(WIN32)
            endif(WIN32)
        endif(UNIX)
    endif(NOT "${TEST_TARGET_NAME}" STREQUAL "mac_server_test" AND NOT "${TEST_TARGET_NAME}" STREQUAL "linux_server_test")
endforeach()